# docvqa

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  evals.py  pyproject.toml
.claude/: .gitignore
configs/: config.yaml
docs/: dataset.md  experiment-history.md  results.md
notebooks/: dataset_exploration.ipynb  ocr_tool_test.py
scripts/: calibrate_qwen_judge.py  judge_mmlongbench_run.py  optimize_flat_solo.py  patch_submission.py  prep_mp_docvqa_sample.py  prepare_submission.py  report.py  run_gemma_chain.sh  run_leanest_solo_da_chains.sh  run_mmlongbench_chain.sh  run_mmlongbench_flat_solo_chain.sh  run_mmlongbench_flat_solo_da_chain.sh  run_mmlongbench_no_loop_pages80_chain.sh  run_mp_docvqa_chain.sh  run_mp_docvqa_flat_solo_chain.sh  run_mp_docvqa_flat_solo_da_chain.sh  run_no_loop_multi_da_chains.sh  run_ocr.py  run_prompt_scrub_chain.sh  run_prompt_scrub_extension_parallel.sh  run_prompt_scrub_test_t5to8.sh  run_qwen9b_chain.sh  run_scaffold_chain.sh  vote_submissions.py
submissions/: _excluded.leanest-m40-3_5-27b-test-t1.json  flat-solo-3_5-27b-test-sc8.json  flat-solo-3_5-27b-test-t1.json  flat-solo-3_5-27b-test-t2.json  flat-solo-3_5-27b-test-t3.json  flat-solo-3_5-27b-test-t4.json  flat-solo-3_5-27b-test-t5.json  flat-solo-3_5-27b-test-t6.json  flat-solo-3_5-27b-test-t7.json  flat-solo-3_5-27b-test-t8.json  flat-solo-3_6-27b-test-sc8.json  flat-solo-3_6-27b-val-sc8.json  flat-solo-no-tips-3_5-27b-test-sc8.json  flat-solo-no-tips-3_5-27b-test-t1.json  flat-solo-no-tips-3_5-27b-test-t2.json  flat-solo-no-tips-3_5-27b-test-t3.json  (+34 more)
(+161 files in other folders)
